--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ scikit-learn = "^1.4.1.post1"
 nbformat = "^5.9.2"
 ipykernel = "^6.29.2"
 pytest-cov = "^4.1.0"
+seaborn = "^0.13.2"
+plotly = "^5.19.0"
 
 
 [build-system]
