--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ ipykernel = "^6.29.2"
 pytest-cov = "^4.1.0"
 seaborn = "^0.13.2"
 plotly = "^5.19.0"
+nucleus = {git = "https://github.com/Medoci/nucleus.git"}
 
 
 [build-system]
